--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.164.0",
     "lamina": "^1.1.23",
     "next": "14.1.4",
