--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-three/fiber": "^8.16.6",
     "@react-three/postprocessing": "^2.16.2",
     "@types/three": "^0.164.0",
+    "glslify-loader": "^2.0.0",
     "lamina": "^1.1.23",
     "next": "14.1.4",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
