fix: card alterado local do link

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/meshes/earth.jsx", "src/app/components/meshes/nile.jsx", "src/app/components/meshes/person.jsx", "src/app/components/meshes/statue.jsx", "src/app/components/scene/earth/index.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/meshes/earth.jsx", "src/app/components/meshes/nile.jsx", "src/app/components/meshes/person.jsx", "src/app/components/meshes/statue.jsx", "src/app/components/scene/earth/index.tsx", "src/app/components/scene/statue/index.jsx"],
   "exclude": ["node_modules"]
 }
