--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-toastify": "^10.0.5",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.11",
     "three": "^0.166.1"
   },
