Passando tudo para TS e removendo o styled-components

--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
   "name": "portfolio",
-  "version": "4.1.0",
+  "version": "3.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@react-three/drei": "^9.108.3",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/postprocessing": "^2.16.2",
-    "framer-motion": "^11.3.4",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "framer-motion": "^12.25.0",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-google-recaptcha": "^3.1.0",
-    "react-toastify": "^10.0.5",
-    "react-vertical-timeline-component": "^3.6.0",
-    "styled-components": "^6.1.11",
-    "three": "^0.166.1"
+    "react-toastify": "^11.0.5",
+    "three": "^0.182.0"
   },
   "devDependencies": {
-    "@types/node": "22.1.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
